Create Google search clone

--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,7 @@
     <title>About Privacy</title>
   </head>
   <body>
-    <h1>Not Much To See Here</h1>
+    <h1>Temporarily Unavailable</h1>
 
     <p>Go back to <a href="./index.html">home page</a></p>
   </body>
