--- a/index.html
+++ b/index.html
@@ -3,16 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Twoogle</title>
+    <title>Google</title>
+    <link rel="stylesheet" href="styles.css" />
+
+    <!-- Google Fonts -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
   </head>
+
   <body>
-    <h1>Twoogle</h1>
+    <div class="main-wrapper">
+      <img
+        src="images/google-image.jpg"
+        alt="Google with different colors each word"
+        class="logo"
+      />
 
-    <p><input type="text" placeholder="Search Twoogle" /></p>
+      <div class="search-input">
+        <span class="material-symbols-outlined icon">Search</span>
+        <input type="text" placeholder="Search Google or Type a URL" />
+        <span class="material-symbols-outlined icon" title="Search by voice">
+          mic
+        </span>
+        <span class="material-symbols-outlined icon" title="Search by image">
+          photo_camera
+        </span>
+      </div>
 
-    <button>Twoogle Search</button>
-    <button>I'm Feeling Lucky</button>
-
-    <p>We Protect Your Data Privacy. <a href="privacy.html">Learn More.</a></p>
+      <p>
+        We Protect Your Data Privacy. <a href="privacy.html">Learn More.</a>
+      </p>
+    </div>
   </body>
 </html>
